refactor data folder structure

--- a/notebooks/11_scrape_farms.ipynb
+++ b/notebooks/11_scrape_farms.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "import csv\n",
     "\n",
-    "with open('../data/farm_overview.csv', mode='w', newline='', encoding='utf-8') as file:\n",
+    "with open('../data/raw_data/farm_overview.csv', mode='w', newline='', encoding='utf-8') as file:\n",
     "        writer = csv.writer(file)\n",
     "        writer.writerow(['Title', 'URL'])\n",
     "\n",
