--- a/notebooks/12_scrape_farm_details.ipynb
+++ b/notebooks/12_scrape_farm_details.ipynb
@@ -26,7 +26,7 @@
     "import csv\n",
     "\n",
     "farm_overview = []\n",
-    "with open('../data/farm_overview.csv', mode='r') as f:\n",
+    "with open('../data/raw_data/farm_overview.csv', mode='r') as f:\n",
     "    reader = csv.reader(f)\n",
     "    for row in reader:\n",
     "        farm_overview.append(row)\n",
@@ -494,7 +494,7 @@
    "source": [
     "import json\n",
     "\n",
-    "with open(\"../data/farm_details.json\", \"w\", encoding='utf-8') as f:\n",
+    "with open(\"../data/raw_data/farm_details.json\", \"w\", encoding='utf-8') as f:\n",
     "    json.dump(farm_details, f, ensure_ascii=False, indent=4)"
    ]
   }
