--- a/notebooks/20_convert_farmdata_to_geojson.ipynb
+++ b/notebooks/20_convert_farmdata_to_geojson.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import json\n",
     "\n",
-    "with open(\"../data/farm_details.json\") as f:\n",
+    "with open(\"../data/raw_data/farm_details.json\") as f:\n",
     "    farm_data = json.load(f)"
    ]
   },
@@ -16891,7 +16891,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/farms.geojson', 'w', encoding='utf-8') as file:\n",
+    "with open('../data/processed_data/farms.geojson', 'w', encoding='utf-8') as file:\n",
     "    json.dump(geojson, file, ensure_ascii=False, indent=4)\n"
    ]
   }
