--- a/notebooks/30_nearest_neighbor_analysis.ipynb
+++ b/notebooks/30_nearest_neighbor_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
    "source": [
     "import geopandas as gpd\n",
     "\n",
-    "df_building_geo = gpd.read_file(\"../data/preprocessed_buildings.geojson\")\n",
+    "df_building_geo = gpd.read_file(\"../data/processed_data/processed_buildings.geojson\")\n",
     "df_building_geo.set_index(\"egid\", inplace=True)\n",
     "\n",
     "df_building_geo.set_crs(epsg=4326, allow_override=True)\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "df_farm_geo = gpd.read_file('../data/farms.geojson')\n",
+    "df_farm_geo = gpd.read_file('../data/processed_data/farms.geojson')\n",
     "\n",
     "df_farm_geo = df_farm_geo.set_crs(epsg=4326, allow_override=True)\n",
     "\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "4          103124          35  3241.967143"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,13 +251,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
-    "with open('../data/preprocessed_buildings.geojson', 'r') as file:\n",
+    "with open('../data/processed_data/processed_buildings.geojson', 'r') as file:\n",
     "    original_geojson = json.load(file)\n",
     "\n",
     "nearby_farms_dict = {}\n",
@@ -277,12 +277,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save\n",
-    "output_filename = \"../data/enriched_buildings_with_farms.geojson\"\n",
+    "output_filename = \"../data/processed_data/enriched_buildings_with_farms.geojson\"\n",
     "with open(output_filename, \"w\") as file:\n",
     "    json.dump(original_geojson, file, ensure_ascii=False, indent=4)"
    ]
