shorten file with top n

--- a/notebooks/31_enrich_nearest_neighbors.ipynb
+++ b/notebooks/31_enrich_nearest_neighbors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved the enriched buildings data with nearby farms details to ../data/processed_data/enriched_buildings_with_farms_details.geojson\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "farms_dict = {feature['id']: feature['properties'] for feature in farms_data['features']}\n",
     "\n",
@@ -40,14 +32,49 @@
     "        if farm_id in farms_dict:\n",
     "            farm_properties = farms_dict[farm_id]\n",
     "            nearby_farm['categories'] = [item['category'] for item in farm_properties.get('lebensmittel', [])]\n",
-    "            nearby_farm['products'] = [product for item in farm_properties.get('lebensmittel', []) for product in item['products']]\n",
+    "            nearby_farm['products'] = [product for item in farm_properties.get('lebensmittel', []) for product in item['products']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved the enriched buildings data with nearby farms details to top_50_buildings_with_farms_details.geojson\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_n = 50\n",
     "\n",
-    "# Save the enriched GeoJSON to a file\n",
-    "output_filename = path_processed_data + 'enriched_buildings_with_farms_details.geojson'\n",
-    "with open(output_filename, 'w') as file:\n",
+    "for building in buildings_data[\"features\"]:\n",
+    "    total_products = sum(\n",
+    "        len(farm[\"products\"]) for farm in building[\"properties\"].get(\"nearby_farms\", [])\n",
+    "    )\n",
+    "    building[\"properties\"][\"total_products\"] = total_products\n",
+    "\n",
+    "sorted_buildings = sorted(\n",
+    "    buildings_data[\"features\"],\n",
+    "    key=lambda x: x[\"properties\"][\"total_products\"],\n",
+    "    reverse=True,\n",
+    ")\n",
+    "\n",
+    "top_buildings = sorted_buildings[:top_n]\n",
+    "\n",
+    "buildings_data[\"features\"] = top_buildings\n",
+    "\n",
+    "# Save the sorted and trimmed GeoJSON to a new file\n",
+    "output_filename = f\"top_{top_n}_buildings_with_farms_details.geojson\"\n",
+    "with open(path_processed_data + output_filename, \"w\") as file:\n",
     "    json.dump(buildings_data, file, ensure_ascii=False, indent=4)\n",
     "\n",
-    "print(f\"Saved the enriched buildings data with nearby farms details to {output_filename}\")\n"
+    "print(\n",
+    "    f\"Saved the enriched buildings data with nearby farms details to {output_filename}\"\n",
+    ")"
    ]
   }
  ],
