add clearfifying comments

--- a/notebooks/20_convert_farmdata_to_geojson.ipynb
+++ b/notebooks/20_convert_farmdata_to_geojson.ipynb
@@ -33,13 +33,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## define base url for search"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -90,6 +83,7 @@
     "from typing import Dict\n",
     "\n",
     "\n",
+    "# define function to get coordinates from address\n",
     "def get_coordinates(address: str, verbose: bool = False) -> Dict[float, float]:\n",
     "    base_url = \"https://api3.geo.admin.ch/rest/services/api/SearchServer?\"\n",
     "    parameters = {\n",
@@ -122,6 +116,7 @@
     "valid_farms = []\n",
     "amount_errors = 0\n",
     "\n",
+    "# define coordinates for each farm\n",
     "for farm in farm_data:\n",
     "    address = farm['info']['address']\n",
     "    coordinates = get_coordinates(address)\n",
@@ -199,6 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save file\n",
     "with open('../data/processed_data/farms.geojson', 'w', encoding='utf-8') as file:\n",
     "    json.dump(geojson, file, ensure_ascii=False, indent=4)\n"
    ]
