create a summary pd

--- a/notebooks/60_catchment_area_analysis_farms.ipynb
+++ b/notebooks/60_catchment_area_analysis_farms.ipynb
@@ -552,6 +552,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## create a summary table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  municipalityName  isochrone_within_5_mode_cycling-regular  \\\n",
+      "0    BachenbÃ¼lach                                   4014.0   \n",
+      "1          BÃ¼lach                                  15019.0   \n",
+      "2        DÃ¤gerlen                                    582.0   \n",
+      "3              Egg                                   1843.0   \n",
+      "4      Gossau (ZH)                                   4142.0   \n",
+      "\n",
+      "   isochrone_within_10_mode_cycling-regular  \\\n",
+      "0                                   26145.0   \n",
+      "1                                   27776.0   \n",
+      "2                                    4715.0   \n",
+      "3                                   15474.0   \n",
+      "4                                   23380.0   \n",
+      "\n",
+      "   isochrone_within_15_mode_cycling-regular  \\\n",
+      "0                                   35374.0   \n",
+      "1                                   37449.0   \n",
+      "2                                   11367.0   \n",
+      "3                                   37841.0   \n",
+      "4                                   38925.0   \n",
+      "\n",
+      "   isochrone_within_5_mode_foot-walking  \\\n",
+      "0                                 829.0   \n",
+      "1                                 201.0   \n",
+      "2                                 217.0   \n",
+      "3                                  86.0   \n",
+      "4                                 329.0   \n",
+      "\n",
+      "   isochrone_within_10_mode_foot-walking  \\\n",
+      "0                                 3172.0   \n",
+      "1                                 3674.0   \n",
+      "2                                  330.0   \n",
+      "3                                  303.0   \n",
+      "4                                 1058.0   \n",
+      "\n",
+      "   isochrone_within_15_mode_foot-walking  isochrone_within_5_mode_driving-car  \\\n",
+      "0                                 8759.0                              10342.0   \n",
+      "1                                12722.0                              24673.0   \n",
+      "2                                  539.0                               7263.0   \n",
+      "3                                  907.0                              11178.0   \n",
+      "4                                 3009.0                               6675.0   \n",
+      "\n",
+      "   isochrone_within_10_mode_driving-car  isochrone_within_15_mode_driving-car  \\\n",
+      "0                               57991.0                              182251.0   \n",
+      "1                               63699.0                              180369.0   \n",
+      "2                               27741.0                               86289.0   \n",
+      "3                               60448.0                              151081.0   \n",
+      "4                               47008.0                              127277.0   \n",
+      "\n",
+      "  isochrone_within_5_mode_cycling-regular_pop  \\\n",
+      "0                                           0   \n",
+      "1                                           0   \n",
+      "2                                           0   \n",
+      "3                                           0   \n",
+      "4                                           0   \n",
+      "\n",
+      "  isochrone_within_10_mode_cycling-regular_pop  \\\n",
+      "0                                            0   \n",
+      "1                                            0   \n",
+      "2                                            0   \n",
+      "3                                            0   \n",
+      "4                                            0   \n",
+      "\n",
+      "  isochrone_within_15_mode_cycling-regular_pop  \\\n",
+      "0                                            0   \n",
+      "1                                            0   \n",
+      "2                                            0   \n",
+      "3                                            0   \n",
+      "4                                            0   \n",
+      "\n",
+      "  isochrone_within_5_mode_foot-walking_pop  \\\n",
+      "0                                        0   \n",
+      "1                                        0   \n",
+      "2                                        0   \n",
+      "3                                        0   \n",
+      "4                                        0   \n",
+      "\n",
+      "  isochrone_within_10_mode_foot-walking_pop  \\\n",
+      "0                                         0   \n",
+      "1                                         0   \n",
+      "2                                         0   \n",
+      "3                                         0   \n",
+      "4                                         0   \n",
+      "\n",
+      "  isochrone_within_15_mode_foot-walking_pop  \\\n",
+      "0                                         0   \n",
+      "1                                         0   \n",
+      "2                                         0   \n",
+      "3                                         0   \n",
+      "4                                         0   \n",
+      "\n",
+      "  isochrone_within_5_mode_driving-car_pop  \\\n",
+      "0                                       0   \n",
+      "1                                       0   \n",
+      "2                                       0   \n",
+      "3                                       0   \n",
+      "4                                       0   \n",
+      "\n",
+      "  isochrone_within_10_mode_driving-car_pop  \\\n",
+      "0                                        0   \n",
+      "1                                        0   \n",
+      "2                                        0   \n",
+      "3                                        0   \n",
+      "4                                        0   \n",
+      "\n",
+      "  isochrone_within_15_mode_driving-car_pop  \n",
+      "0                                        0  \n",
+      "1                                        0  \n",
+      "2                                        0  \n",
+      "3                                        0  \n",
+      "4                                        0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "def extract_population(row, column_name):\n",
+    "    try:\n",
+    "        return json.loads(row[column_name])['features'][0]['properties']['total_pop']\n",
+    "    except (KeyError, TypeError, json.JSONDecodeError):\n",
+    "        return None\n",
+    "\n",
+    "# List of isochrone columns in your DataFrame\n",
+    "isochrone_columns = [col for col in gdf.columns if col.startswith('isochrone_within')]\n",
+    "\n",
+    "# Extract population data for each isochrone column\n",
+    "for col in isochrone_columns:\n",
+    "    gdf[f'{col}_pop'] = gdf.apply(lambda row: extract_population(row, col), axis=1)\n",
+    "\n",
+    "# Create a summary table with total populations by municipality and isochrone\n",
+    "municipality_iso_pop = gdf.groupby('municipalityName')[[f'{col}_pop' for col in isochrone_columns]].sum().reset_index()\n",
+    "\n",
+    "# Rename columns for clarity in the summary table\n",
+    "column_renames = {f'{col}_pop': col for col in isochrone_columns}\n",
+    "municipality_iso_pop = municipality_iso_pop.rename(columns=column_renames)\n",
+    "\n",
+    "print(municipality_iso_pop.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## filter the buildings with the highest population"
    ]
   },
@@ -606,33 +760,6 @@
    "metadata": {},
    "source": [
     "## display some statistics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Municipality with the highest population: ZÃ¼rich\n",
-      "Total population: 107303.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Group by municipality name and sum up the population for each municipality\n",
-    "grouped_population = sorted_gdf.groupby('municipalityName')['total_pop'].sum()\n",
-    "\n",
-    "# Find the municipality with the highest population\n",
-    "max_population_municipality = grouped_population.idxmax()\n",
-    "max_population_value = grouped_population.max()\n",
-    "\n",
-    "# Display the results\n",
-    "print(f\"Municipality with the highest population: {max_population_municipality}\")\n",
-    "print(f\"Total population: {max_population_value}\")"
    ]
   },
   {
