add summary csv

--- a/notebooks/60_catchment_area_analysis_farms.ipynb
+++ b/notebooks/60_catchment_area_analysis_farms.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -606,75 +606,12 @@
       "3                                  907.0                              11178.0   \n",
       "4                                 3009.0                               6675.0   \n",
       "\n",
-      "   isochrone_within_10_mode_driving-car  isochrone_within_15_mode_driving-car  \\\n",
-      "0                               57991.0                              182251.0   \n",
-      "1                               63699.0                              180369.0   \n",
-      "2                               27741.0                               86289.0   \n",
-      "3                               60448.0                              151081.0   \n",
-      "4                               47008.0                              127277.0   \n",
-      "\n",
-      "  isochrone_within_5_mode_cycling-regular_pop  \\\n",
-      "0                                           0   \n",
-      "1                                           0   \n",
-      "2                                           0   \n",
-      "3                                           0   \n",
-      "4                                           0   \n",
-      "\n",
-      "  isochrone_within_10_mode_cycling-regular_pop  \\\n",
-      "0                                            0   \n",
-      "1                                            0   \n",
-      "2                                            0   \n",
-      "3                                            0   \n",
-      "4                                            0   \n",
-      "\n",
-      "  isochrone_within_15_mode_cycling-regular_pop  \\\n",
-      "0                                            0   \n",
-      "1                                            0   \n",
-      "2                                            0   \n",
-      "3                                            0   \n",
-      "4                                            0   \n",
-      "\n",
-      "  isochrone_within_5_mode_foot-walking_pop  \\\n",
-      "0                                        0   \n",
-      "1                                        0   \n",
-      "2                                        0   \n",
-      "3                                        0   \n",
-      "4                                        0   \n",
-      "\n",
-      "  isochrone_within_10_mode_foot-walking_pop  \\\n",
-      "0                                         0   \n",
-      "1                                         0   \n",
-      "2                                         0   \n",
-      "3                                         0   \n",
-      "4                                         0   \n",
-      "\n",
-      "  isochrone_within_15_mode_foot-walking_pop  \\\n",
-      "0                                         0   \n",
-      "1                                         0   \n",
-      "2                                         0   \n",
-      "3                                         0   \n",
-      "4                                         0   \n",
-      "\n",
-      "  isochrone_within_5_mode_driving-car_pop  \\\n",
-      "0                                       0   \n",
-      "1                                       0   \n",
-      "2                                       0   \n",
-      "3                                       0   \n",
-      "4                                       0   \n",
-      "\n",
-      "  isochrone_within_10_mode_driving-car_pop  \\\n",
-      "0                                        0   \n",
-      "1                                        0   \n",
-      "2                                        0   \n",
-      "3                                        0   \n",
-      "4                                        0   \n",
-      "\n",
-      "  isochrone_within_15_mode_driving-car_pop  \n",
-      "0                                        0  \n",
-      "1                                        0  \n",
-      "2                                        0  \n",
-      "3                                        0  \n",
-      "4                                        0  \n"
+      "   isochrone_within_10_mode_driving-car  isochrone_within_15_mode_driving-car  \n",
+      "0                               57991.0                              182251.0  \n",
+      "1                               63699.0                              180369.0  \n",
+      "2                               27741.0                               86289.0  \n",
+      "3                               60448.0                              151081.0  \n",
+      "4                               47008.0                              127277.0  \n"
      ]
     }
    ],
@@ -699,7 +636,19 @@
     "column_renames = {f'{col}_pop': col for col in isochrone_columns}\n",
     "municipality_iso_pop = municipality_iso_pop.rename(columns=column_renames)\n",
     "\n",
+    "# remove columns with suffix _pop\n",
+    "municipality_iso_pop = municipality_iso_pop[[col for col in municipality_iso_pop.columns if not col.endswith('_pop')]]\n",
+    "\n",
     "print(municipality_iso_pop.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "municipality_iso_pop.to_csv('../data/processed_data/municipality_isochrone_population.csv', index=False)"
    ]
   },
   {
