--- a/notebooks/12_scrape_farm_details.ipynb
+++ b/notebooks/12_scrape_farm_details.ipynb
@@ -14,11 +14,10 @@
    "outputs": [],
    "source": [
     "# load csv data\n",
-    "\n",
     "import csv\n",
     "\n",
     "farm_overview = []\n",
-    "with open('../data/raw_data/farm_overview.csv', mode='r') as f:\n",
+    "with open(\"../data/raw_data/farm_overview.csv\", mode=\"r\") as f:\n",
     "    reader = csv.reader(f)\n",
     "    for row in reader:\n",
     "        farm_overview.append(row)\n",
@@ -43,6 +42,7 @@
     "\n",
     "from typing import Dict\n",
     "\n",
+    "\n",
     "def scrape_detail(url: str) -> Dict:\n",
     "    # Set up Selenium with Chrome\n",
     "    options = Options()\n",
@@ -52,35 +52,30 @@
     "    # url example: \"https://www.hofsuche.schweizerbauern.ch/de/farm/langacherhof-9795/vomhof\"\n",
     "    driver.get(url)\n",
     "\n",
-    "    # Wait for the content to load\n",
-    "    # wait = WebDriverWait(driver, 10)\n",
-    "    # wait.until(EC.presence_of_element_located((By.CLASS_NAME, 'address-block')))\n",
-    "\n",
     "    time.sleep(3)\n",
     "\n",
-    "\n",
     "    # Extract the address\n",
-    "    address_block = driver.find_element(By.CLASS_NAME, 'address-block')\n",
-    "    address = address_block.text if address_block else 'Address not found'\n",
+    "    address_block = driver.find_element(By.CLASS_NAME, \"address-block\")\n",
+    "    address = address_block.text if address_block else \"Address not found\"\n",
     "\n",
     "    # Extract the \"Lebensmittel\" information\n",
     "    lebensmittel_data = []\n",
-    "    lebensmittel_sections = driver.find_elements(By.CSS_SELECTOR, '.detail-section .comp-vomhof-offer-rubric')\n",
+    "    lebensmittel_sections = driver.find_elements(By.CSS_SELECTOR, \".detail-section .comp-vomhof-offer-rubric\")\n",
     "\n",
     "    for section in lebensmittel_sections:\n",
-    "        category = section.find_element(By.CSS_SELECTOR, '.sub.label').text\n",
-    "        products = section.find_elements(By.CSS_SELECTOR, '.product-name')\n",
+    "        category = section.find_element(By.CSS_SELECTOR, \".sub.label\").text\n",
+    "        products = section.find_elements(By.CSS_SELECTOR, \".product-name\")\n",
     "        product_names = [product.text for product in products if product.text]\n",
-    "        \n",
-    "        lebensmittel_data.append({'category': category, 'products': product_names})\n",
     "\n",
-    "    farm_info = {'address': address, 'lebensmittel': lebensmittel_data}\n",
+    "        lebensmittel_data.append({\"category\": category, \"products\": product_names})\n",
+    "\n",
+    "    farm_info = {\"address\": address, \"lebensmittel\": lebensmittel_data}\n",
     "\n",
     "    driver.quit()\n",
     "\n",
     "    # Now `farm_info` contains all the required information\n",
     "    print(farm_info)\n",
-    "    return farm_info\n"
+    "    return farm_info"
    ]
   },
   {
@@ -106,7 +101,7 @@
    "source": [
     "import json\n",
     "\n",
-    "with open(\"../data/raw_data/farm_details.json\", \"w\", encoding='utf-8') as f:\n",
+    "with open(\"../data/raw_data/farm_details.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(farm_details, f, ensure_ascii=False, indent=4)"
    ]
   }
