--- a/notebooks/20_convert_farmdata_to_geojson.ipynb
+++ b/notebooks/20_convert_farmdata_to_geojson.ipynb
@@ -41,16 +41,14 @@
     "import requests\n",
     "\n",
     "# Define base url for address search\n",
-    "base_url= \"https://api3.geo.admin.ch/rest/services/api/SearchServer?\"\n",
+    "base_url = \"https://api3.geo.admin.ch/rest/services/api/SearchServer?\"\n",
     "\n",
     "# Set up search parameters: address, origins and type\n",
-    "parameters = {\"searchText\": \"8400 Winterthur, Theaterstrasse 17\",\n",
-    "              \"origins\": \"address\",\n",
-    "              \"type\": \"locations\",\n",
-    "             }\n",
-    "\n",
-    "# Urllib.parse.urlencode turns parameters into url\n",
-    "# print(f\"{base_url}{urllib.parse.urlencode(parameters)}\")"
+    "parameters = {\n",
+    "    \"searchText\": \"8400 Winterthur, Theaterstrasse 17\",\n",
+    "    \"origins\": \"address\",\n",
+    "    \"type\": \"locations\",\n",
+    "}"
    ]
   },
   {
@@ -70,8 +68,8 @@
     "data\n",
     "\n",
     "# Take only the first server response, convert to data frame with relevant infos\n",
-    "df = pd.DataFrame.from_dict(list(data.values())[0][0], orient='columns')\n",
-    "df.iloc[[1,4,5,6,11,12],:1]"
+    "df = pd.DataFrame.from_dict(list(data.values())[0][0], orient=\"columns\")\n",
+    "df.iloc[[1, 4, 5, 6, 11, 12], :1]"
    ]
   },
   {
@@ -100,9 +98,17 @@
     "        if \"lat\" in attrs and \"lon\" in attrs:\n",
     "            return {\"lat\": attrs[\"lat\"], \"lon\": attrs[\"lon\"]}\n",
     "        else:\n",
-    "            print(f\"Latitude and longitude not found in the results for address {address}\") if verbose else None\n",
+    "            (\n",
+    "                print(f\"Latitude and longitude not found in the results for address {address}\")\n",
+    "                if verbose\n",
+    "                else None\n",
+    "            )\n",
     "    else:\n",
-    "        print(f\"Unexpected data structure for address {address}: {data}\") if verbose else None\n",
+    "        (\n",
+    "            print(f\"Unexpected data structure for address {address}: {data}\")\n",
+    "            if verbose\n",
+    "            else None\n",
+    "        )\n",
     "\n",
     "    return None"
    ]
@@ -118,10 +124,10 @@
     "\n",
     "# define coordinates for each farm\n",
     "for farm in farm_data:\n",
-    "    address = farm['info']['address']\n",
+    "    address = farm[\"info\"][\"address\"]\n",
     "    coordinates = get_coordinates(address)\n",
     "    if coordinates:\n",
-    "        farm['info']['coordinates'] = coordinates\n",
+    "        farm[\"info\"][\"coordinates\"] = coordinates\n",
     "        valid_farms.append(farm)\n",
     "    else:\n",
     "        amount_errors += 1\n",
@@ -195,8 +201,8 @@
    "outputs": [],
    "source": [
     "# save file\n",
-    "with open('../data/processed_data/farms.geojson', 'w', encoding='utf-8') as file:\n",
-    "    json.dump(geojson, file, ensure_ascii=False, indent=4)\n"
+    "with open(\"../data/processed_data/farms.geojson\", \"w\", encoding=\"utf-8\") as file:\n",
+    "    json.dump(geojson, file, ensure_ascii=False, indent=4)"
    ]
   }
  ],
