--- a/notebooks/30_nearest_neighbor_analysis.ipynb
+++ b/notebooks/30_nearest_neighbor_analysis.ipynb
@@ -133,7 +133,7 @@
    "source": [
     "import json\n",
     "\n",
-    "with open('../data/processed_data/processed_buildings.geojson', 'r') as file:\n",
+    "with open(\"../data/processed_data/processed_buildings.geojson\", \"r\") as file:\n",
     "    original_geojson = json.load(file)\n",
     "\n",
     "nearby_farms_dict = {}\n",
