--- a/notebooks/31_enrich_nearest_neighbors.ipynb
+++ b/notebooks/31_enrich_nearest_neighbors.ipynb
@@ -6,14 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json \n",
+    "import json\n",
     "\n",
-    "path_processed_data = '../data/processed_data/'\n",
+    "path_processed_data = \"../data/processed_data/\"\n",
     "\n",
-    "with open(path_processed_data + 'farms.geojson', 'r') as file:\n",
+    "with open(path_processed_data + \"farms.geojson\", \"r\") as file:\n",
     "    farms_data = json.load(file)\n",
     "\n",
-    "with open(path_processed_data + 'enriched_buildings_with_farms.geojson', 'r') as file:\n",
+    "with open(path_processed_data + \"enriched_buildings_with_farms.geojson\", \"r\") as file:\n",
     "    buildings_data = json.load(file)"
    ]
   },
@@ -23,16 +23,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "farms_dict = {feature['id']: feature['properties'] for feature in farms_data['features']}\n",
+    "farms_dict = {feature[\"id\"]: feature[\"properties\"] for feature in farms_data[\"features\"]}\n",
     "\n",
     "# Enrich the buildings GeoJSON with farm categories and products\n",
-    "for building in buildings_data['features']:\n",
-    "    for nearby_farm in building['properties'].get('nearby_farms', []):\n",
-    "        farm_id = nearby_farm['farm_id']\n",
+    "for building in buildings_data[\"features\"]:\n",
+    "    for nearby_farm in building[\"properties\"].get(\"nearby_farms\", []):\n",
+    "        farm_id = nearby_farm[\"farm_id\"]\n",
     "        if farm_id in farms_dict:\n",
     "            farm_properties = farms_dict[farm_id]\n",
-    "            nearby_farm['categories'] = [item['category'] for item in farm_properties.get('lebensmittel', [])]\n",
-    "            nearby_farm['products'] = [product for item in farm_properties.get('lebensmittel', []) for product in item['products']]"
+    "            nearby_farm[\"categories\"] = [item[\"category\"] for item in farm_properties.get(\"lebensmittel\", [])]\n",
+    "            nearby_farm[\"products\"] = [\n",
+    "                product\n",
+    "                for item in farm_properties.get(\"lebensmittel\", [])\n",
+    "                for product in item[\"products\"]\n",
+    "            ]"
    ]
   },
   {
@@ -67,14 +71,11 @@
     "\n",
     "buildings_data[\"features\"] = top_buildings\n",
     "\n",
-    "# Save the sorted and trimmed GeoJSON to a new file\n",
     "output_filename = f\"top_{top_n}_buildings_with_farms_details.geojson\"\n",
     "with open(path_processed_data + output_filename, \"w\") as file:\n",
     "    json.dump(buildings_data, file, ensure_ascii=False, indent=4)\n",
     "\n",
-    "print(\n",
-    "    f\"Saved the enriched buildings data with nearby farms details to {output_filename}\"\n",
-    ")"
+    "print(f\"Saved the enriched buildings data with nearby farms details to {output_filename}\")"
    ]
   }
  ],
@@ -94,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
